--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,81 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+/* components/Navbar.module.css */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background:linear-gradient(rgba(0, 0, 0, 0.5), limegreen);
+  color: white;
+}
+
+.logo h1 {
+  margin: 0;
+  font-family: cursive;
+}
+
+.logo h1:hover{
+color:blue;
+
+}
+
+.navLinks {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+}
+
+.navLinks li {
+  cursor: pointer;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burgerLine {
+  width: 28px;
+  height: 3px;
+  background-color: white;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+
+/* When the menu is open, style the burger lines */
+.burgerLineOpen {
+  transform: rotate(45deg);
+  position: relative;
+}
+
+
+
+/* Mobile styles */
+@media screen and (max-width: 768px) {
+  .navLinks {
+    position: absolute;
+    top: 70px;
+    right: 0;
+    background-color: #333;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .navLinks.active {
+    display: flex;
+   opacity: 2;
+  }
+
+  .burger {
+    display: inline-block;
+  }
+}
